some small typos

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,4 @@
-% Latex template: mahmoud.s.fahmy@students.kasralainy.edu.eg
-% For more details: https://www.sharelatex.com/learn/Beamer
+% Latex template: https://github.com/mqTeXUsers/Macquarie-University-Beamer-Theme
 
 % Slide Masters:
 
