fixing font spec for monospace

--- a/beamerfontthememacquarie.sty
+++ b/beamerfontthememacquarie.sty
@@ -74,14 +74,14 @@
       }
     }
   }
-  \iffontsavailable{Noto Sans Mono, Noto Sans Mono Bold}{%
-    \setmonofont[BoldFont={Noto Sans Mono}]{Noto Sans Mono}%
+  \iffontsavailable{Fira Mono, Fira Mono Bold}{%
+    \setmonofont[BoldFont={Fira Mono Medium}]{Fira Mono}%
   }{%
-    \iffontsavailable{Noto Sans Mono OT, Noto Sans Mono Bold OT}{%
-      \setmonofont[BoldFont={Noto Sans Mono OT}]{Noto Sans Mono OT}%
+    \iffontsavailable{Fira Mono OT, Fira Mono Bold OT}{%
+      \setmonofont[BoldFont={Fira Mono Medium OT}]{Fira Mono OT}%
     }{%
-      \PackageWarning{beamerthememacquarie}{%
-        Could not find Noto Sans Mono fonts%
+      \PackageWarning{beamerthememetropolis}{%
+        Could not find Fira Mono fonts%
       }
     }
   }
