--- a/main.tex
+++ b/main.tex
@@ -45,8 +45,7 @@
 \title{Title for a minimal beamer presentation} % Presentation title
 \author{Author One}               % Presentation author
 \institute{Name of department/affiliation}         % Author affiliation
-\date{\today\\
-Here is some extra text to test length of line. Maybe presentation url here?}                 % Today's date  
+\date{\today}                 % Today's date  
 \begin{document}
 
 % Title page
