Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -46,8 +46,7 @@
 \title{Title for a minimal beamer presentation} % Presentation title
 \author{Author One}               % Presentation author
 \institute{Name of department/affiliation}         % Author affiliation
-\date{\today\\
-Here is some extra text to test length of line. Maybe presentation url here?}                 % Today's date  
+\date{\today}                 % Today's date  
 \begin{document}
 
 % Title page
@@ -72,7 +71,7 @@ Here is some extra text to test length of line. Maybe presentation url here?}   
 % <content>
 %\end{frame}
 
-\section{Section One\\Where the section title keeps going and going and going and going.}
+\section{Section One}
 
 \begin{frame}{Slide with bullet points}
   This is a bullet list of two points:
